--- a/components/group/group.wxml
+++ b/components/group/group.wxml
@@ -4,19 +4,21 @@
     Licensed under the Apache-2.0 license
 * -->
 <view class="group-box">
-    <navigator url="/pages/groups/detail?gid={{ group.gid }}" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
-        <view class="weui-cell__hd" wx:if="{{ group.cover }}">
-            <image src="{{ group.cover }}"/>
+    <t-cell class="custom-cell" title="{{ group.gname }}" image="{{ group.cover }}" bordered="{{ false }}" url="/pages/groups/detail?gid={{ group.gid }}">
+        <view slot="description">
+            {{ group.postCount }} {{ postName }} <text style="margin: 0 8px;">|</text> {{ group.postDigestCount }} {{ digestName }}
         </view>
-        <view class="weui-cell__bd" aria-hidden="true">
-            <view>{{ group.gname }}</view>
-            <view class="weui-cell__desc" wx:if="{{ group.description }}">{{ group.description }}</view>
+        <block wx:if="{{ group.interaction.followStatus }}">
+            <t-button slot="note" size="extra-small" icon="check" content="{{ group.interaction.followName }}" bind:tap="onClickGroupFollow" data-gid="{{ group.gid }}"/>
+        </block>
+        <block wx:else>
+            <t-button slot="note" size="extra-small" variant="outline" content="{{ group.interaction.followName }}" bind:tap="onClickGroupFollow" data-gid="{{ group.gid }}"/>
+        </block>
+    </t-cell>
+    <view class="group-description">
+        <view class="description-content" bind:tap="onClickToDetail" data-gid="{{ group.gid }}">
+            <text>{{ description }}</text>
         </view>
-        <view class="weui-cell__ft weui-cell__ft_in-access" aria-hidden="true"></view>
-    </navigator>
-
-    <!-- 互动操作 -->
-    <view class="interactive-btn">
-        <interaction group="{{ group }}"></interaction>
+        <t-divider/>
     </view>
 </view>
