--- a/components/group/group.wxss
+++ b/components/group/group.wxss
@@ -3,24 +3,17 @@
  * Copyright 2021-Present 唐杰
  * Licensed under the Apache-2.0 license
  */
-@import '/assets/styles/weui.wxss';
-
-.weui-cell:first-child:before {
-  display: block;
+.group-description {
+  margin-top: -20rpx;
+  margin-left: 32rpx;
+  margin-right: 32rpx;
 }
 
-.weui-cell__hd image {
-  width: 60px;
-  height: 60px;
-  margin-right: 10px;
-}
-
-.weui-cell_access {
-  padding-bottom: 56px;
-}
-
-.interactive-btn {
-  margin-top: -44px;
-  margin-left: 16px;
-  margin-bottom: 16px;
+.group-description .description-content {
+  background-color: #f0f3f5;
+  border-radius: 12rpx;
+  padding: 20rpx;
+  margin-bottom: 32rpx;
+  color: var(--weui-FG-1);
+  font-size: 24rpx;
 }
