--- a/pages/account/index.wxml
+++ b/pages/account/index.wxml
@@ -6,7 +6,7 @@
 <view class="page" data-weui-theme="{{ theme }}">
     <t-navbar title="{{ title }}">
         <view slot="left">
-            <t-image t-class="custom-image" src="{{ logo }}" aria-label="Fresns" />
+            <t-image t-class="logo-image" src="{{ logo }}" aria-label="Fresns" />
         </view>
     </t-navbar>
 
