--- a/pages/account/index.wxss
+++ b/pages/account/index.wxss
@@ -3,7 +3,7 @@
  * Copyright 2021-Present 唐杰
  * Licensed under the Apache-2.0 license
  */
-.custom-image {
+.logo-image {
   height: 48rpx;
   width: 168rpx;
 }
