--- a/pages/groups/index.wxss
+++ b/pages/groups/index.wxss
@@ -4,19 +4,19 @@
  * Licensed under the Apache-2.0 license
  */
 page {
-  background-color: var(--weui-BG-2);
+  background-color: #fff;
   --td-side-bar-width: 180rpx;
   --td-side-bar-font-size: 28rpx;
   --td-cell-title-font-size: 28rpx;
   --td-cell-image-height: 80rpx;
   --td-cell-image-width: 80rpx;
   --td-cell-description-font-size: 24rpx;
-  --td-cell-description-color: var(--weui-FG-2);
+  --td-cell-description-color: rgba(0,0,0,.3);
   --td-button-extra-small-font-size: 24rpx;
 }
 
 .page {
-  background-color: var(--weui-BG-2);
+  background-color: #fff;
 }
 
 .logo-image {
