--- a/app.wxss
+++ b/app.wxss
@@ -4,7 +4,7 @@
  * Licensed under the Apache-2.0 license
  */
 page {
-  background-color: var(--weui-BG-1);
+  background-color: #f7f7f7;
 }
 
 .page {
