--- a/miniprogram_npm/tdesign-miniprogram/common/template/button.wxml
+++ b/miniprogram_npm/tdesign-miniprogram/common/template/button.wxml
@@ -1,5 +1,6 @@
 <template name="button">
   <t-button
+    t-id="{{tId}}"
     block="{{block || false}}"
     class="{{class || ''}}"
     t-class="{{externalClass}}"
