--- a/components/comment/comment.wxml
+++ b/components/comment/comment.wxml
@@ -6,7 +6,7 @@
 <view class="card">
     <view class="card-header">
         <!-- 用户信息 -->
-        <author author="{{ comment.author }}" isAnonymous="{{ comment.isAnonymous }}" createdTimeAgo="{{ comment.createdTimeAgo }}" location="{{ comment.location }}">
+        <author author="{{ comment.author }}" isAnonymous="{{ comment.isAnonymous }}" createdTimeAgo="{{ comment.createdTimeAgo }}" location="{{ comment.location }}" ipLocation="{{ comment.moreJson.ipLocation || '' }}">
             <t-tag variant="outline" shape="round" wx:if="{{ comment.author.isPostAuthor }}" style="margin-right:10px;">{{ contentAuthor }}</t-tag>
         </author>
     </view>
@@ -63,7 +63,7 @@
 
     <!-- 功能按钮 -->
     <view class="card-footer {{ (type == 'list') ? 'list-style' : '' }}">
-        <interaction type="{{ type }}" comment="{{ comment }}"></interaction>
+        <interaction id="interactionComponent" type="{{ type }}" comment="{{ comment }}"></interaction>
     </view>
 
     <!-- 所属帖子 -->
