--- a/components/editor/editor-draft-selector/editor-draft-selector.wxml
+++ b/components/editor/editor-draft-selector/editor-draft-selector.wxml
@@ -11,7 +11,7 @@
         <view class="weui-cell weui-cell_example" wx:for="{{ posts }}" wx:for-item="post" wx:key="pid" data-id="{{ post.id }}" bind:tap="onClickChooseDraft">
             <view class="weui-cell__hd">{{ post.id }}</view>
             <view class="weui-cell__bd" wx:if="{{ post.title }}">{{ post.title }}</view>
-            <view class="weui-cell__bd" wx:else>{{ post.contentLength > 40 ? post.content.slice(0, 40) + '...' : post.content }}</view>
+            <view class="weui-cell__bd" wx:else>{{ post.contentLength > 40 ? post.content.slice(0, 40) + '...' : (post.content || '') }}</view>
             <view class="weui-cell__ft">{{ post.contentLength }}</view>
         </view>
     </view>
@@ -20,5 +20,5 @@
     <loading status="{{ loadingStatus }}" tipType="{{ loadingTipType }}"></loading>
 
     <!-- 创建新草稿 -->
-    <view wx:if="{{ createBtn }}" class="weui-btn weui-btn_primary" style="width:220px;" bind:tap="onClickCreateDraft">{{ fsLang.createDraft }}</view>
+    <view wx:if="{{ createBtn }}" class="weui-btn weui-btn_primary" style="width:220px;margin-top:50px;" bind:tap="onClickCreateDraft">{{ fsLang.createDraft }}</view>
 </scroll-view>
