--- a/components/editor/editor-hashtag/editor-hashtag.wxml
+++ b/components/editor/editor-hashtag/editor-hashtag.wxml
@@ -22,8 +22,8 @@
             <view class="weui-search-bar {{ inputShowed ? 'weui-search-bar_focusing' : '' }}" id="searchBar">
                 <form class="weui-search-bar__form" aria-role="combobox" aria-haspopup="true" aria-expanded="{{ inputVal.length > 0 ? 'true' : 'false' }}" aria-owns="searchResult">
                     <view class="weui-search-bar__box">
-                        <i class="weui-icon-search"></i>
-                        <input aria-controls="searchResult" type="text" class="weui-search-bar__input" placeholder="{{ inputPlaceholder }}" value="{{ inputVal }}" focus="{{ inputShowed }}" bind:input="inputTyping" bindconfirm="inputConfirm"/>
+                        <mp-icon icon="search" size="{{ 20 }}" style="margin: 0 10px;"/>
+                        <input aria-controls="searchResult" type="text" class="weui-search-bar__input" placeholder="{{ inputPlaceholder }}" value="{{ inputVal }}" focus="{{ inputShowed }}" confirm-type="search" adjust-position="{{ false }}" bind:input="inputTyping" bindconfirm="inputConfirm"/>
                         <view aria-role="button" aria-label="清除" class="weui-icon-clear" wx:if="{{ inputVal.length > 0 }}" bind:tap="clearInput"></view>
                     </view>
                     <label class="weui-search-bar__label" bind:tap="showInput">
@@ -42,6 +42,14 @@
 
                 <!-- 结果列表 -->
                 <scroll-view scroll-y="true" style="height:500px;">
+                    <view role="option" class="weui-cell weui-cell_active weui-cell_access" wx:if="{{ inputVal }}" bind:tap="onSelectHashtag" data-name="{{ inputVal }}">
+                            <view class="weui-cell__hd">
+                                <mp-icon icon="add2" size="{{ 26 }}" style="margin-right: 10px;"/>
+                            </view>
+                        <view class="weui-cell__bd weui-cell_primary">
+                            <view>{{ inputVal }}</view>
+                        </view>
+                    </view>
                     <block wx:for="{{ hashtags }}" wx:for-item="hashtag" wx:key="hid">
                         <view role="option" class="weui-cell weui-cell_active weui-cell_access" bind:tap="onSelectHashtag" data-name="{{ hashtag.name }}">
                             <view class="weui-cell__hd" wx:if="{{ hashtag.image }}">
