--- a/pages/portal/index.wxml
+++ b/pages/portal/index.wxml
@@ -18,5 +18,5 @@
         <text class="weui-loadmore__tips">Powered by Fresns</text>
     </view>
 
-    <tabbar activeLabel="portal"></tabbar>
+    <tabbar id="fresnsTabbar" activeLabel="portal"></tabbar>
 </view>
