--- a/pages/posts/index.wxml
+++ b/pages/posts/index.wxml
@@ -35,5 +35,5 @@
     </view>
 
     <!-- Tabbar -->
-    <tabbar activeLabel="posts"></tabbar>
+    <tabbar id="fresnsTabbar" activeLabel="posts"></tabbar>
 </view>
