--- a/components/post/post.wxml
+++ b/components/post/post.wxml
@@ -24,7 +24,7 @@
             </view>
 
             <view class="content-text">
-                <mp-html content="{{ postContent }}" markdown="{{ true }}" lazy-load="true"/>
+                <mp-html content="{{ postContent }}" markdown="{{ true }}" lazy-load="{{ true }}" selectable="{{ true }}"/>
             </view>
 
             <view class="content-brief" wx:if="{{ type == 'list' && post.isBrief }}">
