--- a/components/post/post.wxml
+++ b/components/post/post.wxml
@@ -24,7 +24,7 @@
             </view>
 
             <view class="content-text">
-                <mp-html content="{{ postContent }}" markdown="{{ true }}" lazy-load="{{ true }}" selectable="{{ true }}"/>
+                <mp-html content="{{ postContent }}" markdown="{{ true }}" lazy-load="{{ true }}" selectable="{{ true }}" bind:linktap="onClickContentLink"/>
             </view>
 
             <view class="content-brief" wx:if="{{ type == 'list' && post.isBrief }}">
@@ -111,4 +111,7 @@
     <view class="card-footer {{ (type == 'list') ? 'list-style' : '' }}">
         <interaction id="interactionComponent" type="{{ type }}" post="{{ post }}"></interaction>
     </view>
+
+    <!-- 隐私授权 -->
+    <privacy showPrivacy="{{ showPrivacy }}"/>
 </view>
