--- a/components/user/profile.wxss
+++ b/components/user/profile.wxss
@@ -84,7 +84,25 @@
 
 .profile-bio {
   padding: 10px 20px;
-  font-weight: 300;
+  font-weight: 400;
+  font-size: 14px;
+}
+
+.profile-verified-desc {
+  margin: 0 20px;
+}
+
+.profile-verified-desc text {
+  padding: 3px 10px;
+  border-radius: 10px;
+  font-weight: 400;
+  font-size: 12px;
+  color: var(--weui-FG-HALF);
+  background-color: var(--weui-ORANGE);
+}
+
+.profile-verified-desc image {
+  height: 14px;
 }
 
 .profile-extcredits {
@@ -103,4 +121,10 @@
 
 .profile-stats {
   margin: 10px 20px;
+}
+
+.profile-followersYouKnow {
+  margin: 0 20px;
+  font-size: 14px;
+  color: var(--weui-FG-1);
 }
