--- a/components/user/section/tabs-followers.wxml
+++ b/components/user/section/tabs-followers.wxml
@@ -4,7 +4,9 @@
     Licensed under the Apache-2.0 license
 * -->
 <t-tabs default-value="{{ defaultValue }}" sticky bind:change="onTabsChange" bind:click="onTabsClick" t-class="custom-tabs">
-    <t-tab-panel label="{{ tabs.followersYouFollow }}" value="followersYouFollow" wx:if="{{ fresnsUser.uid != user.uid }}" />
+    <block wx:if="{{ fresnsUser }}">
+        <t-tab-panel label="{{ tabs.followersYouFollow }}" value="followersYouFollow" wx:if="{{ fresnsUser.uid != user.uid }}" />
+    </block>
     <t-tab-panel label="{{ tabs.followers }}" value="followers" />
     <t-tab-panel label="{{ tabs.following }}" value="following" />
 </t-tabs>
