--- a/pages/portal/channels.wxss
+++ b/pages/portal/channels.wxss
@@ -16,3 +16,41 @@
 .t-icon-backtop-rectangle {
   color: #f40;
 }
+
+.t-icon-money {
+  color: #2ba471;
+}
+
+.sponsor {
+  margin: 0 20px;
+  margin-bottom: 10px;
+}
+
+.sponsor-special navigator {
+  margin-bottom: 10px;
+}
+
+.sponsor-box {
+  margin-bottom: 15px;
+}
+
+.sponsor-box navigator {
+  padding: 15px 15px 10px 15px;
+  background-color: #fff;
+  border-radius: 10px;
+}
+
+.sponsor-special image {
+  width: 100%;
+  height: 90px;
+}
+
+.sponsor-platinum image {
+  width: 100%;
+  height: 40px;
+}
+
+.sponsor-gold image {
+  width: 100%;
+  height: 24px;
+}
