--- a/components/post/post.wxss
+++ b/components/post/post.wxss
@@ -80,6 +80,14 @@
   margin-bottom: -10px;
 }
 
+.list-style .content-title {
+  font-size: 16px;
+}
+
+.list-style .content-text {
+  font-size: 15px;
+}
+
 .content-brief {
   margin-top: 8px;
 }
