--- a/components/post/post.wxml
+++ b/components/post/post.wxml
@@ -16,9 +16,9 @@
         </block>
     </view>
 
-    <view class="card-body {{ (type == 'list') ? 'list-style' : '' }}" bind:tap="onClickToDetail">
+    <view class="card-body {{ (type == 'list') ? 'list-style' : '' }}">
         <!-- 内容 -->
-        <view class="fresns-content">
+        <view class="fresns-content" bind:tap="onClickToDetail">
             <view class="content-title">
                 <text wx:if="{{ post.title }}">{{ post.title }}</text>
             </view>
@@ -51,7 +51,9 @@
         </view>
 
         <!-- 附件文件 -->
-        <files files="{{ post.files }}"/>
+        <view bind:tap="onClickToDetail">
+            <files files="{{ post.files }}"/>
+        </view>
 
         <!-- 扩展内容: 文本框 -->
         <view class="extend-bottom" wx:if="{{ post.extends.textBox.length > 0 }}">
@@ -73,7 +75,7 @@
         </view>
 
         <!-- 附属信息 -->
-        <view class="content-append clearfix" data-isLink="true">
+        <view class="content-append clearfix">
             <!-- 小组信息 -->
             <navigator class="content-group float-left" url="/pages/groups/detail?gid={{ post.group.gid }}" wx:if="{{ post.group.gid }}">
                 <image wx:if="{{ post.group.cover }}" src="{{ post.group.cover }}" class="group-icon" mode="aspectFit"></image>
