--- a/components/comment/comment.wxml
+++ b/components/comment/comment.wxml
@@ -7,7 +7,7 @@
     <view class="card-header">
         <!-- 用户信息 -->
         <author author="{{ comment.author }}" isAnonymous="{{ comment.isAnonymous }}" createdTimeAgo="{{ comment.createdTimeAgo }}" location="{{ comment.location }}" ipLocation="{{ comment.moreJson.ipLocation || '' }}">
-            <t-tag variant="outline" shape="round" wx:if="{{ comment.author.isPostAuthor }}" style="margin-right:10px;">{{ contentAuthor }}</t-tag>
+            <t-tag variant="outline" shape="round" wx:if="{{ comment.author.isPostAuthor }}" style="margin-right:10px;font-size: 12px;">{{ contentAuthor }}</t-tag>
         </author>
     </view>
 
