--- a/pages/portal/about.wxss
+++ b/pages/portal/about.wxss
@@ -30,10 +30,14 @@
   border-top: 0px solid var(--weui-FG-3);
 }
 
+.tabbar-spacing {
+  padding-bottom: 0;
+}
+
 .client-version {
   color: var(--weui-FG-1);
   font-size: 14px;
   text-align: center;
   margin-top: -20px;
-  margin-bottom: 30px;
+  height: 80px;
 }
