--- a/pages/posts/index.wxss
+++ b/pages/posts/index.wxss
@@ -3,3 +3,8 @@
  * Copyright 2021-Present 唐杰
  * Licensed under the Apache-2.0 license
  */
+.logo-image {
+  height: 48rpx;
+  width: 166rpx;
+  margin-top: 20rpx;
+}
