--- a/pages/account/index.wxss
+++ b/pages/account/index.wxss
@@ -4,8 +4,9 @@
  * Licensed under the Apache-2.0 license
  */
 .logo-image {
-  height: 48rpx;
-  width: 166rpx;
+  height: 44rpx;
+  width: 154rpx;
+  margin-top: 4rpx;
 }
 
 .weui-cell__bd {
