--- a/components/editor/comment-box/comment-box.wxml
+++ b/components/editor/comment-box/comment-box.wxml
@@ -82,6 +82,6 @@
     <view class="login-tip">{{ fsLang.errorNoLogin }}</view>
 
     <navigator url="/pages/account/login" class="weui-btn weui-btn_primary">
-        {{ fsLang.accountLogin }}
+        {{ fsLang.accountLoginGoTo }}
     </navigator>
 </block>
