--- a/components/post/section/interaction.wxml
+++ b/components/post/section/interaction.wxml
@@ -55,7 +55,8 @@
 			</view>
 			<view class="weui-actionsheet__menu">
 				<view class="weui-actionsheet__cell" bind:tap="onShareCopyLink">{{ fresnsLang.copyLink }}</view>
-				<button class="weui-actionsheet__cell" open-type="share" data-type="post" data-fsid="{{ post.pid }}" data-title="{{ title }}" style="width:100%;font-weight:400;background-color:var(--weui-BG-2);">发送给朋友</button>
+				<button class="weui-actionsheet__cell" open-type="share" data-type="post" data-fsid="{{ post.pid }}" data-title="{{ title }}" style="width:100%;font-weight:400;background-color:var(--weui-BG-2);border-radius: 0;">发送给朋友</button>
+				<view class="weui-actionsheet__cell" bind:tap="onQuote">{{ fresnsLang.quote }}</view>
 			</view>
 			<view class="weui-actionsheet__action">
 				<view class="weui-actionsheet__cell" bind:tap="onHideShareMenus">{{ fresnsLang.cancel }}</view>
