--- a/pages/groups/detail.wxml
+++ b/pages/groups/detail.wxml
@@ -69,7 +69,7 @@
     <loading status="{{ loadingStatus }}" tipType="{{ loadingTipType }}"></loading>
 
     <!-- 发表 -->
-    <t-fab icon="add" bind:click="onClickPublish" aria-label="发表"/>
+    <t-fab icon="add" wx:if="{{ showPublishBtn }}" bind:click="onClickPublish" aria-label="发表"/>
 
     <view class="weui-loadmore weui-loadmore_line tabbar-spacing">
         <text class="weui-loadmore__tips">Powered by Fresns</text>
