--- a/components/editor/editor-files/editor-files.wxml
+++ b/components/editor/editor-files/editor-files.wxml
@@ -69,7 +69,7 @@
     </block>
 </view>
 
-<view wx:if="{{ showActionSheet }}" aria-role="dialog" aria-modal="true" bind:tap="close">
+<view wx:if="{{ showActionSheet }}" aria-role="dialog" aria-modal="true" class="fadeIn" bind:tap="close">
     <view class="weui-mask" aria-role="button" aria-label="关闭" bind:tap="close"></view>
     <view class="weui-actionsheet weui-actionsheet_toggle">
         <view class="weui-actionsheet__menu">
