--- a/components/group/group.wxml
+++ b/components/group/group.wxml
@@ -8,18 +8,12 @@
         <view slot="description">
             {{ group.postCount }} {{ postName }} <text style="margin: 0 5px;">|</text> {{ group.postDigestCount }} {{ digestName }}
         </view>
-        <view slot="note">
-            <t-button 
-                size="extra-small" 
-                icon="{{ group.interaction.followStatus ? 'check' : '' }}" 
-                variant="{{ group.interaction.followStatus ? '' : 'outline' }}" 
-                content="{{ group.interaction.followName }}" 
-                bind:tap="onClickGroupFollow" 
-                data-gid="{{ group.gid }}"/>
+        <view slot="note" wx:if="{{ currentCategoryGid != 'fresns-my-groups' }}">
+            <t-button size="extra-small" variant="{{ group.interaction.followStatus ? '' : 'outline' }}" content="{{ group.interaction.followStatus ? '已' : '' }}{{ group.interaction.followName }}" bind:tap="onClickGroupFollow" data-gid="{{ group.gid }}"/>
         </view>
     </t-cell>
     <view class="group-description">
-        <view class="description-content" bind:tap="onClickToDetail" data-gid="{{ group.gid }}">
+        <view class="description-content" wx:if="{{ currentCategoryGid != 'fresns-my-groups' }}" bind:tap="onClickToDetail" data-gid="{{ group.gid }}">
             <text>{{ description }}</text>
         </view>
         <t-divider/>
